<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_collect_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.joelniklaus.indoloc.activities.CollectDataActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:id="@+id/intro"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="87dp" />


    <Button
        android:text="Add Data Point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:id="@+id/addDataPoint"
        android:onClick="addDataPoint" />

    <TextView
        android:text="Data values at your location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:id="@+id/data"
        android:layout_above="@+id/radioGroup"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addDataPoint"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:text="@string/corridor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/corridor"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/kitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kitchen"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/living_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/livingRoom"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/nicola_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/roomNicola"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/tobias_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/roomTobias"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/joel_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/roomJoel"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:text="Save Data Points to Arff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/saveToArff"
        android:onClick="saveToArff" />

</RelativeLayout>
